--- a/index.html
+++ b/index.html
@@ -1,41 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link rel="icon" type="image/x-icon" href="img/instagram.svg">
     <title>Instagram</title>
 </head>
 <body>
-    <div class="instagram-wrapper">
-        <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="celular">
-        </div>
-        <div class="instagram-continue">
-            <div class="group">
-                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
-                <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
-                </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
-            </div>
-            <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
-                <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
-                    ou
-                    <span class="link-blue">Inscreva-se</span>
-                </p>
-            </div>
-            <div class="get-the-app">
-                <p class="get-app">Baixe o aplicativo</p>
-                <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+    
+    <section class="container">
+        <div class="left-container">
+            <img src="img/celularloginscreen.png" alt="">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="img/screen01.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/screen02.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/screen03.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/screen04.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="right-container">
+            <div class="login-area">
+                <div class="icon">
+                    <img src="img/instagram-logo.png" alt="">
+                </div>
+                <div class="form">
+                    <input type="text" placeholder="Telefone, nome de usuário ou email">
+                    <input type="password" placeholder="Senha">
+                    <button class="btn-entrar">Entrar</button>
+                </div>
+                <div class="separator">
+                    <div class="line"></div>
+                    <span>OU</span>
+                    <div class="line"></div>
+                </div>
+                <a href="">
+                    <img src="img/facebookicon.svg" alt="">
+                    Entrar com o Facebook</a>
+                <a href=""><span>Esqueceu sua senha?</span></a>    
+            </div>
+            <div class="cadastre-area">
+                <span>Não tem uma conta? <strong><a href="">Cadastre-se</a></strong></span>
+            </div>
+            <div class="download-area">
+                <span>Obtenha o aplicativo</span>
+                <div class="stores">
+                    <div class="image">
+                        <a href=""><img src="img/apple-button.png" alt=""></a>
+                    </div>
+                    <div class="image">
+                        <a href=""><img src="img/googleplay-button.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="plugins.js"></script>
 </body>
 </html>
